--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.8.1
-botocore==1.34.159
 Django==5.0.7
 django-markdownx==4.0.7
 django-storages==1.14.4
+gunicorn==23.0.0
 jmespath==1.0.1
 Markdown==3.5.2
 markdown2==2.5.0
+packaging==25.0
 pillow==10.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
